--- a/smart_hallway/pubspec.yaml
+++ b/smart_hallway/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   circular_countdown_timer: ^0.2.3
   xml: ^6.2.2
   permission_handler: ^10.2.0
+  shared_preferences: ^2.0.18
 
 dev_dependencies:
   flutter_test:
