--- a/smart_hallway/pubspec.yaml
+++ b/smart_hallway/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   xml: ^6.2.2
   permission_handler: ^10.2.0
   shared_preferences: ^2.0.18
+  regexed_validator: ^2.0.0+1
+  ssh2: ^2.2.3
 
 dev_dependencies:
   flutter_test:
