--- a/smart_hallway/android/app/src/main/AndroidManifest.xml
+++ b/smart_hallway/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.example.smart_hallway">
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="smart_hallway"
         android:name="${applicationName}"
